# MerchantMind-AI-Powered-Payment-Intelligence-Self-Service-ML-Platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
.github/workflows/: ci-cd.yml
data/knowledge_base/: eftpos_guide.md  merchant_faq.md  payment_best_practices.md  pci_dss_summary.md
data/scripts/: build_duckdb.py  download_and_enrich.py  run_full_ingestion.py
docs/: architecture.md
docs/adr/: 001-why-isolation-forest-plus-xgboost.md  002-why-multi-agent-architecture.md  003-why-faiss-over-pinecone.md  004-why-medallion-architecture.md  005-why-serverless-inference.md
docs/runbooks/: incident-response.md  model-retraining.md
frontend/: index.html
model_artifacts/: anomaly_detector.joblib
models/chargeback-predictor/: model_config.yaml
reports/: responsible_ai_scorecard_20260226012932.json  responsible_ai_scorecard_20260226013049.json  responsible_ai_scorecard_20260226015540.json
scripts/: start_api.sh
src/agents/: anomaly_agent.py  guardrails.py  rag_agent.py  router.py  sql_agent.py
src/api/: main.py
src/common/: __init__.py  duckdb_backend.py  optional_deps.py
src/feature_store/: build_training_features.py  feature_definitions.py  feature_engine.py
src/governance/: bias_detection.py  pii_masking.py  scorecard.py
src/monitoring/: drift_detector.py  model_metrics.py
src/observability/: logging.py
src/platform/: cli.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/smoke/: test_deployed_api.py
(+39 files in other folders)
