[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merchantmind"
version = "1.0.0"
description = "AI-powered payment intelligence platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
  "integration: integration tests that may require network access",
  "smoke: smoke tests for basic app wiring",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
